// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress component should be Large 1`] = `
<progress
  className="progress is-large"
  max={100}
  value={30}
/>
`;

exports[`Progress component should concat classname in props with Bulma classname 1`] = `
<progress
  className="progress other-class this-is-a-test"
  max={100}
  value={30}
/>
`;

exports[`Progress component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "render": [Function],
}
`;

exports[`Progress component should have notification classname 1`] = `
<progress
  className="progress"
  max={100}
  value={30}
/>
`;

exports[`Progress component should use inline styles 1`] = `
<progress
  className="progress"
  max={100}
  style={
    Object {
      "width": 250,
    }
  }
  value={30}
/>
`;

exports[`Progress component should use use color black 1`] = `
<progress
  className="progress is-black"
  max={100}
  value={30}
/>
`;

exports[`Progress component should use use color danger 1`] = `
<progress
  className="progress is-danger"
  max={100}
  value={30}
/>
`;

exports[`Progress component should use use color dark 1`] = `
<progress
  className="progress is-dark"
  max={100}
  value={30}
/>
`;

exports[`Progress component should use use color info 1`] = `
<progress
  className="progress is-info"
  max={100}
  value={30}
/>
`;

exports[`Progress component should use use color light 1`] = `
<progress
  className="progress is-light"
  max={100}
  value={30}
/>
`;

exports[`Progress component should use use color link 1`] = `
<progress
  className="progress is-link"
  max={100}
  value={30}
/>
`;

exports[`Progress component should use use color primary 1`] = `
<progress
  className="progress is-primary"
  max={100}
  value={30}
/>
`;

exports[`Progress component should use use color success 1`] = `
<progress
  className="progress is-success"
  max={100}
  value={30}
/>
`;

exports[`Progress component should use use color warning 1`] = `
<progress
  className="progress is-warning"
  max={100}
  value={30}
/>
`;

exports[`Progress component should use use color white 1`] = `
<progress
  className="progress is-white"
  max={100}
  value={30}
/>
`;
